--- a/Payment/Pending Payment_files/app.css
+++ b/Payment/Pending Payment_files/app.css
@@ -4646,7 +4646,7 @@ input[type=button].btn-block {
 .navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-    color: rgba(0, 0, 0, 0.9);
+    color: #0a78c4;
 }
 
 .navbar-light .navbar-toggler {
