--- a/style.css
+++ b/style.css
@@ -100,25 +100,28 @@
     margin-top: 10vh;
 }
 
-.checkout_text {
+/* Page Button */
+
+.page-button-Text {
     font-size: 13px;
     color: #ffffff;
-    margin-top: 4px;
 }
 
-.white_tick {
-    height: 2vh;
+.page-button-Icon {
+    height: 3vh;
     padding-left: 1vh;
-    margin-top: 7px;
 }
 
-.checkout_button {
+.page-Button {
     display: flex;
     color: #fff;
     background-color: #b145e9;
     border-color: #2176bd;
     border-radius: 3vh;
+    height: 5vh;
 }
+
+/* //// */
 
 .color-next {
     background-color: #f5feff !important;
@@ -129,28 +132,8 @@
     padding-left: 2vh;
 }
 
-.pay_buttonSubmit {
-    display: flex;
-    background: #a06af6;
-    width: 7vw;
-    height: 6vh;
-    border-radius: 3vh;
-    margin-bottom: 2vh;
-    margin-left: 2vh;
-}
-
 .payment_pay_buttons {
     display: flex;
-}
-
-.upload_slip_btn {
-    background: #ffffff;
-    border-color: #a06af6;
-    width: 18vw;
-    height: 6vh;
-    border-radius: 3vh;
-    margin-bottom: 2vh;
-    margin-left: 2vh;
 }
 
 .total_rm {
@@ -159,11 +142,6 @@
     justify-content: space-evenly;
     width: 25vw;
     padding-top: 1vh;
-}
-
-.pay-button-text {
-    color: #ffffff;
-    margin-left: 2vh;
 }
 
 .upload-slip-text {
@@ -185,26 +163,8 @@
     margin-left: 2vh;
 }
 
-.download_button {
-    background: #a06af6;
-    width: 10vw;
-    height: 6vh;
-    border-radius: 3vh;
-    margin-bottom: 2vh;
-    margin-left: 2vh;
-}
-
-.print_button {
-    background: #a06af6;
-    width: 7vw;
-    height: 6vh;
-    border-radius: 3vh;
-    margin-bottom: 2vh;
-    margin-left: 2vh;
-}
-
-.download_print_text {
-    color: #ffffff
+.download-margin {
+    margin-left: 3vh;
 }
 
 .header_receipt {
@@ -340,9 +300,26 @@
     justify-content: center;
     border-style: solid;
     border-color: #a06af6;
-    width: 18vw;
-    height: 6vh;
+    width: 14vw;
+    height: 5vh;
     border-radius: 3vh;
     margin-bottom: 2vh;
     margin-left: 2vh;
+}
+
+.sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus, .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:active {
+    color: #0a78c4 !important;
+    background-color: #b4e7f0;
+    border-radius: 2px;
+}
+
+.sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus, .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:hover {
+    color: #0a78c4 !important;
+    background-color: #b4e7f0;
+    border-radius: 2px;
+}
+
+.navbar-light .navbar-nav .show>.nav-link, .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
+    color: #0a78c4;
+    background-color: #b4e7f0;
 }
