--- a/style.css
+++ b/style.css
@@ -119,9 +119,18 @@
     border-color: #2176bd;
     border-radius: 3vh;
     height: 5vh;
+    min-width: 90px;
 }
 
 /* //// */
+
+.pay-margin {
+    margin-left: 2vh;
+}
+
+.print-text-margin {
+    margin-left: 2vh;
+}
 
 .color-next {
     background-color: #f5feff !important;
@@ -175,10 +184,6 @@
 .back_img {
     height: 3vh;
     margin-right: 1vh;
-}
-
-.navbar-light .navbar-nav .show>.nav-link, .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
-    color: #0a78c4;
 }
 
 .nav-left-sidebar .submenu {
@@ -266,8 +271,15 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     margin-top: 4vh;
-    margin-bottom: 2vh;
+    margin-bottom: 6vh;
     box-shadow: -2px 4px 2px 0px rgb(72 124 159 / 37%);
+}
+
+.popup-title {
+    margin-top: 2vh;
+    margin-left: 2vh;
+    color: #0a78c4;
+    font-weight: 600;
 }
 
 .close-icon-wrapper {
@@ -285,6 +297,7 @@
     width: 8vw;
     height: 5vh;
     border-radius: 3vh;
+    min-width: 90px;
 }
 
 .file-choose-text {
@@ -307,14 +320,14 @@
     margin-left: 2vh;
 }
 
-.sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus, .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:active {
-    color: #0a78c4 !important;
+/* .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus, .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:active {
+    color: #0a78c4;
     background-color: #b4e7f0;
     border-radius: 2px;
 }
 
 .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus, .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:hover {
-    color: #0a78c4 !important;
+    color: #0a78c4;
     background-color: #b4e7f0;
     border-radius: 2px;
 }
@@ -322,4 +335,24 @@
 .navbar-light .navbar-nav .show>.nav-link, .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
     color: #0a78c4;
     background-color: #b4e7f0;
+}
+
+.sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus, .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link.active {
+    background-color: #ffffff !important;
+    color: #a8d8dd;
+    border-radius: 2px;
+    font-weight: 600;
+} */
+
+.sidebar-dark.nav-left-sidebar .navbar-nav .nav-link {
+    color: #a8d8dd;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.sidebar-dark.nav-left-sidebar .navbar-nav .nav-link:focus, .sidebar-dark.nav-left-sidebar .navbar-nav .nav-link.active {
+    background-color: #b4e7f0;
+    color: #0a78c4;
+    border-radius: 2px;
+    font-weight: 600;
 }
