--- a/style.css
+++ b/style.css
@@ -356,3 +356,12 @@
     border-radius: 2px;
     font-weight: 600;
 }
+
+.nav-user-info {
+    background-color: #5969ff;
+    line-height: 1.4;
+    padding: 12px;
+    color: #fff;
+    font-size: 13px;
+    border-radius: 0.25rem;
+}
