--- a/Payment/Upload Pay Slip files/style(1).css
+++ b/Payment/Upload Pay Slip files/style(1).css
@@ -1939,7 +1939,7 @@ Container / Wrapper
     left: 0;
     margin-left: 170px;
     min-height: 870px !important;
-    background: #d4f0f2;
+    background: #EDF6FD;
 }
 
 .dashboard-content {
