--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@
 .page-Button {
     display: flex;
     color: #fff;
-    background-color: #b145e9;
+    background-color: #8B57E9;
     border-color: #2176bd;
     border-radius: 20px;
     border-width: 2px;
